test/fail/invalid_types1.min
program
    number x
start
    x = "hello";
end
